
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.example.eddie.drivelog.DriveActivityFragment">


    <TextView android:text="@string/start_location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/starting_point_label" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/start_location_text"
        android:hint="@string/start_location_hint"/>
    <TextView
        android:text="@string/end_location_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_location_label"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end_location_text"
        android:hint="@string/end_location_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_edit_text"
        android:hint="@string/distance_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odometer_label"
        android:id="@+id/odomteter_textview"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/odometer_edit"
        android:hint="Enter you odometer reading!"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/date_button" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:paddingBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_drive_frag_button"
            android:id="@+id/live_drive_button_frag"/>

    </LinearLayout>



</LinearLayout>

